--- a/template.html
+++ b/template.html
@@ -18,6 +18,6 @@
         </h4>
 
         <input type="file" class="addInput" name="addInput"/>
-        <input type="submit"  value="Submit" class="addButton sig-button sig-button-icon sig-button-save" disabled="true"/>
+        <input type="submit"  value="Submit" class="addButton" disabled="true"/>
     </form>
 </div>
