--- a/_template.html
+++ b/_template.html
@@ -1,4 +1,4 @@
-<div id='smfActions' class="sig-content">
+<div  class="sig-content">
 
 
     <form class="addForm"
@@ -6,7 +6,7 @@
           enctype="multipart/form-data;"
           method="POST">
 
-        <h2>SMF Actions</h2>
+
         <h3>Select file to upload</h3>
         <h4  class="addInformer">
             <div  style="display: none;" class="alert-loading">
