--- a/_template.html
+++ b/_template.html
@@ -1,6 +1,6 @@
 
     <form class="addForm"
-          action="/javascripts/success.json"
+          action="/serverpath"
           enctype="multipart/form-data;"
           method="POST">
 
