--- a/_template.html
+++ b/_template.html
@@ -8,7 +8,7 @@
         <h3>Select file to upload</h3>
         <h4  class="addInformer">
             <div  style="display: none;" class="alert-loading">
-                <img src="../images/loading.gif" />
+                 loading...
             </div>
             <div style="display: none;" class="alert alert-success"></div>
             <div style="display: none;" class="alert alert-error"></div>
